# InternGenie

./: .gitignore  AUTO_TRAINING_GUIDE.md  INTELLIGENT_CHATBOT_README.md  OPTIMIZED_CHATBOT_FEATURES.md  README.md  SECURITY_AND_PRIVACY_GUIDE.md  SETUP_HYBRID.md  env.example  nginx.conf  test_auto_training.py  test_intelligent_chatbot.py
backend/: api.py  api_backup.py  auth.py  clear_sample_data.py  database.py  enhanced_recommender.py  generate_sample_data.py  intelligent_chatbot.py  ml_pipeline.py  recommender.py  request_logging_middleware.py  requirements.txt  session_logger.py  simple_chatbot.py  test_ml_pipeline.py  train_chatbot.py  train_ml_models.py  utils.py
backend/data/: candidates.json  internships.json  test_duplicates.json  test_internships.json
backend/rust-api/: Cargo.toml
backend/rust-api/src/: auth.rs  database.rs  insights.rs  main.rs  middleware.rs  python_client.rs  recommendations.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedMatchScore.tsx  AnimatedTyping.tsx  ApplicationCard.tsx  ApplicationFilters.tsx  CollaborativeInsights.tsx  DoubtsChatbot.tsx  FilterPanel.tsx  ForgotPasswordModal.tsx  HeartIcon.tsx  InfiniteScrollApplicationList.tsx  LoginForm.tsx  Navbar.tsx  NotificationSystem.tsx  Pagination.tsx  PasswordInput.tsx  PasswordUpdateModal.tsx  PrivacyAgreementModal.tsx  RecommendationCard.tsx  RecommendationCarousel.tsx  SavedFilters.tsx  SearchBar.tsx  SignupForm.tsx  TermsOfUsageModal.tsx  (+2 more)
(+13 files in other folders)
