[package]
name = "intern-genie-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Python API fallback
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Authentication
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

# ML and data processing
ndarray = "0.15"
nalgebra = "0.32"

# Password hashing
bcrypt = "0.15"

# Async utilities
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
